[gd_scene load_steps=4 format=3 uid="uid://b66vhebabhf72"]

[ext_resource type="Script" uid="uid://bedyne663axes" path="res://scripts/dias/continuar.gd" id="1_xvkd6"]
[ext_resource type="FontFile" uid="uid://dhqb677wbwrwx" path="res://VT323-Regular.ttf" id="2_mlbvd"]
[ext_resource type="Script" uid="uid://b11u0xywxcgxm" path="res://scripts/dias/dia_3.gd" id="2_n33ke"]

[node name="Dia1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xvkd6")
metadata/_edit_vertical_guides_ = [595.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 1120.0
offset_bottom = 77.0
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("2_mlbvd")
theme_override_font_sizes/font_size = 40
text = "DIA 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 141.0
offset_right = 1120.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("2_mlbvd")
theme_override_font_sizes/font_size = 20
text = "La gente es bastate variada. He repartido algunas not√≠cias, de momento no sospechan nada. Tengo mas control del que pensaba.
Me da pena la MADRE, espero que su marido llegue bien, por ahora no hubieron incidentes.
"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 234.0
offset_right = 916.0
offset_bottom = 616.0
size_flags_vertical = 3
script = ExtResource("2_n33ke")

[node name="preocupacion_cura" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="satisfaccion_cura" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="vida_cura" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="preocupacion_esceptico" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="satisfaccion_esceptico" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="vida_esceptico" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="preocupacion_madre" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="satisfaccion_madre" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="vida_madre" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -102.0
offset_right = 89.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_mlbvd")
theme_override_font_sizes/font_size = 30
text = "CONTINUAR"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
